# sample

./: .travis.yml  Makefile.am  README.md  configure.ac  index.md
_layouts/: project.html  subpage.html
info/: Makefile.am  author.h2m
snap/: snapcraft.yaml
src/: Makefile.am  nifty.h  pcg_basic.h  sample.c  sample.yuck
test/: Makefile.am  clitoris.c  sample_01.clit  sample_02.clit  sample_03.clit  sample_04.clit  sample_05.clit  sample_06.clit  sample_07.clit  sample_08.clit  sample_09.clit  sample_10.clit  sample_11.clit  sample_12.clit  sample_13.clit  sample_14.clit  sample_15.clit  sample_16.clit  sample_17.clit  sample_18.clit  sample_19.clit  sample_20.clit  sample_21.clit  sample_22.clit  sample_23.clit  sample_24.clit  sample_25.clit  sample_26.clit  sample_27.clit  sample_28.clit
